syntax="proto3";

package genproto;
option go_package="genproto/contact_service";

import "contact.proto";

service ContactService {
    rpc Create(Contact) returns (ContactId) {}
    rpc GetAll(UserId) returns (Contact) {}
    rpc Get(ContactId) returns (Contact) {}
    rpc Update(ContactId) returns (ContactUpdate) {}
    rpc Delete(ContactId) returns (ContactUpdate) {}

}
