syntax="proto3";

package genproto;
option go_package="genproto/user_service";

import "user.proto";

service UserService {
    rpc CreateUser(User) returns (UserrId) {}
    rpc GenerateToken(GetAllUserRequest) returns (GetToken) {}
    rpc ParseToken(GetToken) returns (GetTokenResponse) {}
}
